fix for agc, style.css vertical align center at Legend

--- a/agc-frontend/src/static/style.css
+++ b/agc-frontend/src/static/style.css
@@ -423,6 +423,7 @@ a.nav-link.active {
 
 .nodeLegend, .edgeLegend {
     min-height: 47px;
+    line-height: 46px;
     width: 100%;
     padding-left: 15px;
     padding-right: 15px;
